Fix placement issues